--- a/trunk/client/company-tearsheet.html
+++ b/trunk/client/company-tearsheet.html
@@ -91,7 +91,7 @@
                                     <tr class="even">
                                         <td>Total Market Cap</td>
                                         <td class="property formattable" data-format="millions" data-name="marketCap"></td>
-                                        <td>Float %</td>
+                                        <td>Float</td>
                                         <td class="property formattable" data-format="percent" data-name="floatPercentage" data-unit="percent">-</td>
                                     </tr>
                                     </tbody>
@@ -163,7 +163,7 @@
                             <table cellspacing="0">
                                 <thead>
                                     <tr>
-                                        <td width="50%">Top 5 owners by shares held</td>
+                                        <td width="50%">Substantial Shareholders</td>
                                         <td width="25%" class="right">Number of shares held</td>
                                         <td width="25%" class="right">Percent of shares held</td>
                                     </tr>
@@ -225,7 +225,7 @@
             
                 <div class="module stock-events">
                     <div class="title">
-                        <div class="label">News</div>
+                        <div class="label">Key Developments <img src="img/info.jpg" alt="" class="glossary-item glossary-left" glossary-key="keyDevs" width="11" height="11" /></div>
                     </div>
                     <ul></ul>
 					<div class="no-data">There is no data to show for the selected period.</div>
