--- a/trunk/client/print.html
+++ b/trunk/client/print.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>SGX</title>
-    <link rel="stylesheet" href="stylesheets/style.css?v=2.0" />
-    <link rel="stylesheet" href="stylesheets/print.css" />
+    <link type="text/css" rel="stylesheet" href="stylesheets/style.css?v=2.0" />
+    <link id="print-css" type="text/css" rel="stylesheet" href="stylesheets/print.css?v=2.0" />
 	<script type="text/javascript">window.renderable = false;</script>
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
 </head>
