--- a/trunk/client/terms-conditions.html
+++ b/trunk/client/terms-conditions.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SGX - Alpha Factors</title>
+    <title>SGX - Terms</title>
     <link rel="stylesheet" href="stylesheets/style.css?v=2.0" />
 	<link rel="stylesheet" href="stylesheets/vendor/colorbox/colorbox.css" />
 	<!--[if lt IE 9]>
