--- a/clientv2/index.html
+++ b/clientv2/index.html
@@ -136,13 +136,8 @@
 	
 	<div class="alpha-factors">
 	
-		<span class="column" data-bind="foreach: factors.slice(0, 4)">
-			<span data-bind="template: 'alpha-factor'"></span>
-		</span>
-		
-		<span class="column rt" data-bind="foreach: factors.slice(4, 8)">
-			<span data-bind="template: 'alpha-factor'"></span>
-		</span>
+		<span class="column" data-bind="template: { name: 'alpha-factor', foreach: factors.slice(0, 4), afterRender: checkDefault }"></span>
+		<span class="column" data-bind="template: { name: 'alpha-factor', foreach: factors.slice(4, 8), afterRender: checkDefault }"></span>
 	
 	</div>
 
