--- a/trunk/clientv2/index.html
+++ b/trunk/clientv2/index.html
@@ -26,14 +26,14 @@
 	</div>
 </div>
 
-<div class="grid">
+<div class="grid screener-header">
 
 	<div class="column-one">
 		<h1>StockFacts</h1>
 	</div>
 	
 	<div class="column-two right bottom">
-		<div class="button user-guide"><img src="img/pdf.png" width="16" height="16" /> View User Guide</div>
+		<div class="button user-guide" onclick="window.open('http://www.sgx.com/wps/wcm/connect/f912408c-fc27-4cfa-ac02-90970dc6fd30/StockFacts-User-Guide.pdf?MOD=AJPERES');"><img src="img/pdf.png" width="16" height="16" /> View User Guide</div>
 	</div>
 	
 </div>
