--- a/trunk/clientv2/index.html
+++ b/trunk/clientv2/index.html
@@ -199,7 +199,7 @@
 
 
 <div class="grid disclosure">
-	Source: S&amp;P Capital IQ - <a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
+	Source: S&amp;P Capital IQ - <a data-bind="siteLink:'terms-conditions'">Use of this information is subject to terms and conditions</a>
 </div>	
 
 <!-- goes at bottom for faster page load -->
