--- a/trunk/clientv2/modules/company-profile.html
+++ b/trunk/clientv2/modules/company-profile.html
@@ -1,6 +1,8 @@
 <div class="grid profile">
 
 	<div class="column-one">
+	
+		<div id="price-volume"></div>
 
 		<div class="section-break" data-bind="tabs">
 		
@@ -233,6 +235,21 @@
 	</div>
 
 	<div class="column-two">
+	
+		<div data-bind="visible: keyDevs().length > 0">
+			<div class="title">
+				<h3>In The News <img width="11" height="11" data-bind="tooltip: 'keyDevs'" alt="" src="img/info.jpg" /></h3>
+			</div>
+			<div class="gray-border padded">
+				<ul class="key-devs" data-bind="foreach: keyDevs">
+					<li>
+						<div data-bind="text: $parent.getLetter($index())"></div>
+						<span data-bind="text: headline, click: function(data, event) { $parent.keyDevClick($parent, data, event); }"></span>
+					</li>
+				</ul>
+			</div>
+		
+		</div>
 	
 	</div>
 
