--- a/trunk/clientv2/forgot-password.html
+++ b/trunk/clientv2/forgot-password.html
@@ -32,7 +32,7 @@
 			<div class="error-messages">
 				<p data-bind="validationMessage:email"></p>
 			</div>
-			<a class="button" data-bind="click:$root.resetPass, css: {'disabled-btn': (isFormValid() == undefined || errors().length)}">Reset password</a>
+			<a class="button" data-bind="click:$root.forgotPass, css: {'disabled-btn': (isFormValid() == undefined || errors().length)}">Reset password</a>
 		</div>
 		<footer>
 			<span class="right">Remembered your password? <a data-bind="siteLink:'sign-in'">Sign in</a></span>
