--- a/trunk/clientv2/account-settings.html
+++ b/trunk/clientv2/account-settings.html
@@ -20,6 +20,7 @@
 
 <body style="width: auto;">
 	<section class="settings">
+		<p>You are currently enrolled in a StockFacts Premium account. It is set to expire on <a href="#">123456</a></p>
 		<div class="form">
 			<div class="form-wrapper">
 				<label>Email Address</label>
