--- a/trunk/clientv2/reset-password.html
+++ b/trunk/clientv2/reset-password.html
@@ -25,12 +25,12 @@
 		</header>
 		<div class="form">
 			<p>Please enter the temporary password that was emailed to you, and create a new password.</p>
-			<input class="text" type="email" data-bind="value: tempPassword" placeholder="Temporary Password">
+			<input class="text" type="email" data-bind="value: email" placeholder="Email Address">
 			<input class="text" type="password" data-bind="value: newPassword" placeholder="New Password">
 			<input class="text" type="password" data-bind="value: retypeNewPassword" placeholder="Retype New Password">
 						
 			<div class="error-messages">
-				<p data-bind="validationMessage:tempPassword"></p>
+				<p data-bind="validationMessage:email"></p>
 				<p data-bind="validationMessage:newPassword"></p>
 				<p data-bind="validationMessage:retypeNewPassword"></p>
 			</div>
