--- a/trunk/clientv2/reset-password.html
+++ b/trunk/clientv2/reset-password.html
@@ -34,7 +34,7 @@
 				<p data-bind="validationMessage:newPassword"></p>
 				<p data-bind="validationMessage:retypeNewPassword"></p>
 			</div>
-			<a class="button" data-bind="click:$root.changePass, css: {'disabled-btn': (isFormValid() == undefined || errors().length)}">Change Password</a>
+			<a class="button" data-bind="click:$root.resetPass, css: {'disabled-btn': (isFormValid() == undefined || errors().length)}">Change Password</a>
 		</div>
 		<footer>
 		</footer>
